Bug 374616 - Visibility of association role name labels are not updated
Summary: Visibility of association role name labels are not updated
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.21.0 (KDE Applications 16.12.0)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-06 00:10 UTC by Ralf Habacker
Modified: 2017-01-09 00:45 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.21.2 (KDE Applications 16.12.2)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2017-01-06 00:10:51 UTC
How to reproduce:
1. start umbrello
2. add two classes to a diagram named A and B
3. add attribute a of type B to class A
-> the association role name label of B end shows '-b' which indicates private visibility.
4. double click on attribute b in tree view, change visibility to public and press okay
-> the association role name label of B end still shows '-b'.

What is expected:
The association role name label of B end should show the correct visibility
Comment 1 Ralf Habacker 2017-01-09 00:45:19 UTC
Git commit 60d94f8fef1220f23701dacba59d2668cc93ff70 by Ralf Habacker.
Committed on 09/01/2017 at 00:44.
Pushed by habacker into branch 'Applications/16.12'.

Avoid obsolates writes of AssociationWidget property settings on applying.

Obsolates writes are in in setText() and in setVisibility() where a
signal/slot loopback from UMLAssociation|UMLAttribute::setVisibility()
was present.

M  +12   -24   umbrello/umlwidgets/associationwidget.cpp

https://commits.kde.org/umbrello/60d94f8fef1220f23701dacba59d2668cc93ff70
Comment 2 Ralf Habacker 2017-01-09 00:45:19 UTC
Git commit 83cbf8ae1eb39314ef9b6b1e093d943648c29ef9 by Ralf Habacker.
Committed on 09/01/2017 at 00:44.
Pushed by habacker into branch 'Applications/16.12'.

Fix 'Visibility of association role name labels are not updated'.

In AssociationWidget::setVisibility() make sure that prefix text
of role name widget is set unconditional and also make sure that
the related ClassifierWidget is signaled only on calling
UMLAttribute::setName().
FIXED-IN:2.21.2 (KDE Applications 16.12.2)

M  +6    -6    umbrello/dialogs/umlattributedialog.cpp
M  +1    -4    umbrello/umlwidgets/associationwidget.cpp

https://commits.kde.org/umbrello/83cbf8ae1eb39314ef9b6b1e093d943648c29ef9