Fix 'Visibility of association role name labels are not updated'.

In AssociationWidget::setVisibility() make sure that prefix text
of role name widget is set unconditional and also make sure that
the related ClassifierWidget is signaled only on calling
UMLAttribute::setName().

BUG:374616
FIXED-IN:2.21.2 (KDE Applications 16.12.2)